# Khadkov_A_D_kursov_3

./: README.md  pyproject.toml
src/: operation.py  operations_on_accounts.py  utils.py
tests/: test_utils.py  tests_data.json
