[tool.poetry]
name = "khadkov-a-d-kursov-3"
version = "0.1.0"
description = ""
authors = ["Aleksey_Khadkov <trewert132@gmail.com>"]
readme = "README.md"
packages = [{include = "khadkov_a_d_kursov_3"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
